# http-file-rtrvr

./: Dockerfile  README.md  pyproject.toml  test_aci_http_rtrvr_example.com.zsh  test_aci_http_rtrvr_example.zip.zsh  test_archive_http_rtrvr_github.zsh  test_asb_rcv.zsh  test_simple_example.com_in_docker.zsh  test_simple_example_com.zsh
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
http_file_rtrvr/: azure_svc_bus_http_file_rtrvr.py  constants.py  env_var_http_file_rtrvr.py  exceptions.py  http_method.py  retrieval_request.py  retrieval_response.py  retrieval_svc.py  svc_return_code.py
http_file_rtrvr/anti-virus/: README.md
http_file_rtrvr/extract/: abstract_extractor.py  extraction_exception.py  tar_extractor.py  zip_extractor.py
http_file_rtrvr/uploader/: abstract_file_tree_uploader.py  abstract_file_uploader.py  directory_uploader.py
http_file_rtrvr/uploader/azure/: file_to_azure_blob_uploader.py
scripts/: asb-local-poetry.zsh  env-vars.zsh  event-job-aca.zsh
tests/: test_azure_file_upload.py  test_blob_key_generation.py  test_retrieval_svc.py  test_rtrvr_integration.py  test_tar_extraction.py  test_unzip.py
tests/svc_mocks/: always_succeed_file_tree_uploader.py  always_succeed_file_uploader.py
tests/test_archives/: short_page.html  tgz_archive.tgz
