[tool.poetry]
name = "http-file-rtrvr"
version = "0.1.0"
description = ""
authors = ["Tim Perry <perry2of5@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-json = "^0.6.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
norecursedirs = ["docs", "build"]
testpaths = ["tests", "integration"]
